# VoxelizatiionDemo

./: .gitignore  .gitmodules  CMakeLists.txt  Cell.cpp  Cell.h  Entities.cpp  Entities.h  File.h  MultiThreads.cpp  MultiThreads.h  Pixel.h  bocchi.h  geom.h  json_reader.cpp  json_reader.h  log.md  main.cpp  main.cu  my_macros.h  readme.md  stl_reader.h  test.py  trace.h  utils.h
optix/: launch.cu  launch.h
tool/: build.bat  view.gltf
